...
                   }
                   Spacer(modifier = Modifier.padding(16.dp))
                   Button(
                       onClick = onConfirmDelete,
                       modifier = Modifier.weight(1f)
                   ) {
                       Text(text = "Delete")
                   }
                }
            },
            dismissButton = null

        )
...
