...
        horizontalAlignment = Alignment.CenterHorizontally,
        verticalArrangement = Arrangement.Center
    ) {
        //top part with title and icon, which shows up in all modes.
        JobbyAppIcon(modifier = Modifier.size(80.dp))
        Text(
            text = "Jobby",
            style = MaterialTheme.typography.displayMedium,
            fontWeight = FontWeight.Bold,
            color = MaterialTheme.colorScheme.primary
        )
        Text(
            text = "Your Job Search Buddy",
...
